<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTaskActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbCreateTask"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskName"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tbCreateTask" />

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="yes"
        android:inputType="textAutoCorrect"
        app:layout_constraintTop_toBottomOf="@id/tvTaskName" />

    <Button
        android:id="@+id/bTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bTaskDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTaskName" />

    <EditText
        android:id="@+id/etTaskDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/blank"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bTaskDate"
        />

    <Button
        android:id="@+id/bTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bTaskTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTaskDate" />

    <EditText
        android:id="@+id/etTaskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="yes"
        android:textSize="24sp"
        android:text="@string/blank"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bTaskTime"
        />

    <Button
        android:id="@+id/bDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DoneButton"
        app:layout_constraintTop_toBottomOf="@id/etTaskTime"/>

</android.support.constraint.ConstraintLayout>